Refactor ArchUnit rules, replace all Junit assertions with assertJ